--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -43,23 +43,18 @@
         }
     </div>
 
+    <!-- Toggle Create Post Button -->
+    <button class="create-post-toggle-btn" (click)="toggleCreatePost()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+        </svg>
+        {{ showCreatePost ? 'Cancel' : 'Create New Post' }}
+    </button>
+
     <!-- Post Creation Form -->
+    @if(showCreatePost) {
     <div class="create-post-section">
-        <div class="create-post-header">
-            <div class="header-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                    <path
-                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                    <path fill-rule="evenodd"
-                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
-                </svg>
-            </div>
-            <div class="header-text">
-                <h2>Create New Post</h2>
-                <p>Share your thoughts with the community</p>
-            </div>
-        </div>
-        <form (ngSubmit)="onCreatePost()" class="create-post-form">
+        <form (ngSubmit)="onCreatePost()" class="create-post-form-compact">
             <div class="form-group title-group">
                 <div class="title-input-wrapper">
                     <input id="post-title" [(ngModel)]="post.title" name="title" maxlength="200" type="text"
@@ -136,6 +131,7 @@
             </div>
         </form>
     </div>
+    }
 
     <!-- User Posts Section -->
     <div class="user-posts-section">
